# tensor

./: .gitignore  CMakeLists.txt  FindTIRA.cmake  Plate Integration.ipynb  VotingMath2.ipynb  VotingMath3.ipynb  cuda_calls.cu  demo_noisy.npy  gendata.py  generate_data.py  generate_stick_and_ball_2D.py  gui.cpp  gui.h  image2tensor.cpp  image2tensor.py  structen.cpp  structen.py  structure2d.py  tensor_testbench.py  tensorview2.cpp  tensorview3.cpp  tensorvote.cpp  tensorvote.cu  tensorvote.cuh  tensorvote.h  tensorvote.py  tensorvote.sh  tensorvote3d.py  testbench.py  tv2.h  tv2_callbacks.cpp  tv2_imgui.cpp  tv2_io.cpp  tv2_processing.cpp  tv2_render.cpp  tview2.cpp  tview2.h  tview2_callbacks.cpp  tview2_imgui.cpp  tview2_io.cpp  (+3 more)
.ipynb_checkpoints/: VotingMath3-checkpoint.ipynb
ImGuiFileBrowser/: ImGuiFileBrowser.cpp
ImGuiFileDialog/: ImGuiFileDialog.cpp  ImGuiFileDialog.h  ImGuiFileDialogConfig.h  LICENSE  README.md
data/: 0_1.npy  1_1.npy  bar_tensor_field.npy  damaged_shape.npy  demo2.npy  demo2noise.npy  gendata.py  generate_data.py  lena.npy  magic.xcf  oval.npy  oval3d.npy  spread_hurl.xcf
data/gendata/: grid.py  spiral.py
docs/: PlateVotingMath3.ipynb  VotingMath2.ipynb  VotingMath3.ipynb  tensorview3.pptx
lib/ImGuiFileDialog/: ImGuiFileDialog.h
python/: bar_impulse.py  compare2.py  tensorvote3d.py
shaders/: axis.shader  colormap.shader  glyph2d.shader  glyph3d.shader  source.shader  volume.shader  volumemap.shader  volumemap_enface.shader  volumemap_planes.shader
source/glyphs3/: glyphs3.cpp  glyphs3.h
source/image2tensor/: cuda_calls.cu  cuda_wrappers.cu  image2tensor.cpp
source/include/: glyphs.h
source/shaders/: glyph2d.shader  volume.shader  volumemap_enface.shader
source/tvote2/: callbacks.cpp  cuda_wrappers.cu  imgui.cpp  io.cpp  processing.cpp  render.cpp  tvote2.cpp  tvote2.h  tvote2_hsa.cu  tvote2_imgui.cpp  tvote2_io.cpp  tvote2_processing.cpp  tvote2_render.cpp
source/tvote3/: tvote3.cpp  tvote3.h  tvote3_callbacks.cpp  tvote3_hsa.cu  tvote3_imgui.cpp  tvote3_io.cpp  tvote3_processing.cpp  tvote3_render.cpp
tview2/: tview2_callbacks.cpp  tview2_imgui.cpp  tview2_io.cpp  tview2_processing.cpp
tview3/: tview3.cpp  tview3.h  tview3_callbacks.cpp  tview3_imgui.cpp  tview3_io.cpp  tview3_processing.cpp  tview3_render.cpp
tvote2/: tvote2.h  tvote2_callbacks.cpp  tvote2_hsa.cu  tvote2_imgui.cpp  tvote2_io.cpp  tvote2_processing.cpp  tvote2_render.cpp
tvote3/: tvote3.cpp  tvote3.h  tvote3_callbacks.cpp  tvote3_hsa.cu  tvote3_imgui.cpp  tvote3_io.cpp  tvote3_processing.cpp  tvote3_render.cpp
